release date=17:10 06.06.2016,version=0.0.2-1
 * Fixed NullPointerExeption.