@@ -13,8 +13,8 @@ apply plugin: 'application'
 
 mainClassName = 'net.luxvacuos.voxel.launcher.bootstrap.Bootstrap'
 sourceCompatibility = 1.8
-def opt = "1"
-def mversion = "0.0.2"
+def opt = ""
+def mversion = "0.0.3"
 
 sourceSets {
     main {
