@@ -22,7 +22,7 @@ package net.luxvacuos.voxel.launcher.core;
 
 public class LauncherVariables {
 
-	public static String version = "0.0.2";
+	public static String version = "0.0.3";
 	public static final String host = "https://get.luxvacuos.net";
 	public static final String authHost = "https://luxvacuos.net";
 	public static final String project = "voxel";
