@@ -20,10 +20,13 @@
 
 package net.luxvacuos.voxel.launcher.ui.stages;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.URLConnection;
+
 import javafx.application.Platform;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
-import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
@@ -34,9 +37,11 @@ import javafx.scene.control.TextField;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.GridPane;
+import javafx.scene.text.Font;
 import javafx.scene.text.Text;
 import javafx.stage.Stage;
 import net.luxvacuos.voxel.launcher.core.AuthHelper;
+import net.luxvacuos.voxel.launcher.core.LauncherVariables;
 import net.luxvacuos.voxel.launcher.ui.MainUI;
 
 public class Login extends GridPane {
@@ -53,7 +58,6 @@ public class Login extends GridPane {
 		setAlignment(Pos.CENTER);
 		setHgap(10);
 		setVgap(10);
-		setPadding(new Insets(20, 100, 20, 100));
 
 		Image voxelLogoI = new Image(getClass().getClassLoader().getResourceAsStream("assets/menu/Voxel-Logo.png"));
 
@@ -66,79 +70,97 @@ public class Login extends GridPane {
 
 		add(voxelLogo, 0, 0);
 
+		GridPane updatePane = new GridPane();
+		updatePane.setAlignment(Pos.CENTER);
+		updatePane.setHgap(10);
+		updatePane.setVgap(10);
+		new Thread(() -> {
+			URL url;
+			String latest = LauncherVariables.version;
+			try {
+				url = new URL("https://get.luxvacuos.net/launcher/version");
+				URLConnection conn = url.openConnection();
+				BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+				latest = bufferedReader.readLine();
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+			if (!latest.equals(LauncherVariables.version)) {
+				Hyperlink updateNotice = new Hyperlink("New Update available!");
+				updateNotice.setFont(new Font(16));
+				updateNotice.setOnAction((event) -> {
+					ui.getHostServices().showDocument("https://github.com/Lux-Vacuos/Voxel/releases");
+				});
+				Platform.runLater(() -> updatePane.add(updateNotice, 0, 0));
+			}
+		}).start();
+
+		add(updatePane, 0, 1);
+
+		GridPane loginPane = new GridPane();
+		loginPane.setHgap(10);
+		loginPane.setVgap(10);
+		loginPane.setAlignment(Pos.CENTER);
+
 		userText = new Text("Username:");
-		add(userText, 0, 1);
+		loginPane.add(userText, 0, 0);
 
 		userField = new TextField();
-		add(userField, 0, 2);
+		loginPane.add(userField, 0, 1);
 
 		passText = new Text("Password:");
-		add(passText, 0, 3);
+		loginPane.add(passText, 0, 2);
 
 		passField = new PasswordField();
-		add(passField, 0, 4);
+		loginPane.add(passField, 0, 3);
+		add(loginPane, 0, 2);
 
 		GridPane bottom = new GridPane();
 		bottom.setHgap(10);
 		bottom.setVgap(10);
 
 		login = new Button("Login");
-		login.setOnAction(new EventHandler<ActionEvent>() {
-			@Override
-			public void handle(ActionEvent event) {
-				userField.setEditable(false);
-				passField.setEditable(false);
-				loginProgress.setVisible(true);
-				loginProgress.setProgress(-1);
-				new Thread(new Runnable() {
-
-					@Override
-					public void run() {
-						if (AuthHelper.login(userField.getText(), passField.getText()))
-							Platform.runLater(new Runnable() {
-
-								@Override
-								public void run() {
-									stage.hide();
-									stage.setScene(new Scene(ui.getMainStage()));
-									stage.centerOnScreen();
-									stage.show();
-									ui.getMainStage().userName.setText("Welcome, " + userField.getText());
-									passField.setText("");
-								}
-							});
-						else
-							Platform.runLater(new Runnable() {
-								@Override
-								public void run() {
-									userField.setText("");
-									passField.setText("");
-									userField.setEditable(true);
-									passField.setEditable(true);
-									loginProgress.setVisible(false);
-									loginProgress.setProgress(0);
-								}
-							});
-					}
-				}).start();
-			};
+		login.setOnAction((event) -> {
+			userField.setEditable(false);
+			passField.setEditable(false);
+			loginProgress.setVisible(true);
+			loginProgress.setProgress(-1);
+			new Thread(() -> {
+				if (AuthHelper.login(userField.getText(), passField.getText()))
+					Platform.runLater(() -> {
+						stage.hide();
+						stage.setScene(new Scene(ui.getMainStage()));
+						stage.centerOnScreen();
+						stage.show();
+						ui.getMainStage().userName.setText("Welcome, " + userField.getText());
+						passField.setText("");
+					});
+				else
+					Platform.runLater(() -> {
+						userField.setText("");
+						passField.setText("");
+						userField.setEditable(true);
+						passField.setEditable(true);
+						loginProgress.setVisible(false);
+						loginProgress.setProgress(0);
+					});
+			}).start();
 		});
 		bottom.add(login, 0, 0);
+
 		Hyperlink link = new Hyperlink("Don't have an account?");
-		link.setOnAction(new EventHandler<ActionEvent>() {
-			@Override
-			public void handle(ActionEvent event) {
-				ui.getHostServices().showDocument("https://luxvacuos.net/forum/register.php");
-			}
+		link.setOnAction((event) -> {
+			ui.getHostServices().showDocument("https://luxvacuos.net/forum/register.php");
 		});
 
 		bottom.add(link, 1, 0);
-		add(bottom, 0, 5);
+		add(bottom, 0, 3);
 
 		loginProgress = new ProgressBar(0);
 		loginProgress.setVisible(false);
 		loginProgress.setMinWidth(200);
-		add(loginProgress, 0, 6);
+
+		add(loginProgress, 0, 4);
 
 	}
 
